# MLM_SupportVectorMachine

./: Airbnb ML Project (1).ipynb  README.md  baseline.py  dataset_sample.csv  main.py  pyproject.toml
.ipynb_checkpoints/: Airbnb ML Project (1)-checkpoint.ipynb
